--- a/index.html
+++ b/index.html
@@ -1,30 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>E-School</title>
     <!-- css includes -->
-    <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
+    <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header class="header overflow-hidden">
+      <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+          <div class="container">
+            <a class="navbar-brand" href="#"
+              ><img class="logo-image" src="./images/icons/Logo.png" alt="logo"
+            /></a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarNavAltMarkup"
+              aria-controls="navbarNavAltMarkup"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div
+              class="collapse navbar-collapse justify-content-end"
+              id="navbarNavAltMarkup"
+            >
+              <div class="navbar-nav">
+                <a class="nav-link active" aria-current="page" href="#"
+                  >Books</a
+                >
+                <a class="nav-link" href="#">Courses</a>
+                <a class="nav-link" href="#">Other</a>
+                <a class="nav-link" href="#">Blog</a>
+                <a class="signin-button" href="#">Sign in</a>
+              </div>
+            </div>
+          </div>
+        </nav>
+      </div>
 
+      <div class="container py-5 mt-5">
+        <div class="row align-items-center">
+          <div class="col-md-5">
+            <h6>Are you ready to learn?</h6>
+            <h1 class="main-heading mt-3">
+              Learn With fun<br />
+              on <span class="heading-color">any schedule</span>
+            </h1>
+            <p class="mt-3">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Varius
+              blandit facilisis quam netus.
+            </p>
+            <a class="signin-button d-inline-block mt-3" href="#"
+              >Get Started</a
+            >
+          </div>
+          <div class="col-md-7">
+            <img
+              class="img-fluid"
+              src="./images/photos/Illustration.png"
+              alt="illustration"
+            />
+          </div>
+        </div>
+      </div>
+    </header>
 
-
-
-
-
-
-
-
-
-
-
+    <main>
+      <section class="container mt-5 mb-5">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
+          <div class="col">
+            <div class="details card text-center py-5">
+              <img
+                src="./images/icons/Student.png"
+                class="w-25 mx-auto"
+                alt="..."
+              />
+              <div class="card-body pb-0">
+                <h5 class="card-title">1500+ Topic</h5>
+                <p class="card-text">Learn Anythings</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="details card text-center py-5">
+              <img
+                src="./images/icons/Test.png"
+                class="w-25 mx-auto"
+                alt="..."
+              />
+              <div class="card-body pb-0">
+                <h5 class="card-title">1800+ Students</h5>
+                <p class="card-text">Learn Anythings</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="details card text-center py-5">
+              <img
+                src="./images/icons/Students.png"
+                class="w-25 mx-auto"
+                alt="..."
+              />
+              <div class="card-body pb-0">
+                <h5 class="card-title">9K+ Test Token</h5>
+                <p class="card-text">Learn Anythings</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="details card text-center py-5">
+              <img
+                src="./images/icons/book.png"
+                class="w-25 mx-auto"
+                alt="..."
+              />
+              <div class="card-body pb-0">
+                <h5 class="card-title">2000+ Student</h5>
+                <p class="card-text">Learn Anythings</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
 
     <!-- js includes -->
     <script src="bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
-</body>
+  </body>
 </html>
